# IAR_FAE_hello-dev-container_16-06-2025

./: CMakeLists.txt  CMakePresets.json  README.md  light-effects-cmake.ewp  main.c
.devcontainer/: devcontainer.json
.github/workflows/: CXARM_CI.yaml
